--- a/mail_outbound_static/i18n/es.po
+++ b/mail_outbound_static/i18n/es.po
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-09-03 12:53+0000\n"
 "PO-Revision-Date: 2020-09-03 12:53+0000\n"
@@ -16,10 +16,6 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: mail_outbound_static
-#: model:ir.model.fields,field_description:mail_outbound_static.field_ir_mail_server__display_name
-msgid "Display Name"
-msgstr ""
-
 #: model:ir.model.fields,help:mail_outbound_static.field_ir_mail_server__domain_whitelist
 msgid ""
 "Allowed Domains list separated by commas. If there is not given SMTP server "
@@ -27,37 +23,31 @@ msgid ""
 "messages where the message 'From' email domain match with the domain "
 "whitelist."
 msgstr ""
+"Lista de dominios permitidos separados por comas. Si no se ha seleccionado un servidor SMTP "
+"nos permitirá seleccionar el servidor de mail apropiado para enviar los "
+"mensajes donde el dominio del email del 'De' coincida con la lista blanca "
+"de dominios."
 
 #. module: mail_outbound_static
 #: model:ir.model.fields,field_description:mail_outbound_static.field_ir_mail_server__domain_whitelist
 msgid "Domain Whitelist"
-msgstr ""
+msgstr "Lista blanca de dominios"
 
 #. module: mail_outbound_static
 #: model:ir.model.fields,field_description:mail_outbound_static.field_ir_mail_server__smtp_from
 msgid "Email From"
-msgstr ""
-
-#. module: mail_outbound_static
-#: model:ir.model.fields,field_description:mail_outbound_static.field_ir_mail_server__id
-msgid "ID"
-msgstr ""
-
-#. module: mail_outbound_static
-#: model:ir.model.fields,field_description:mail_outbound_static.field_ir_mail_server____last_update
-msgid "Last Modified on"
-msgstr ""
+msgstr "Email De"
 
 #. module: mail_outbound_static
 #: model:ir.model,name:mail_outbound_static.model_ir_mail_server
 msgid "Mail Server"
-msgstr ""
+msgstr "Servidor de correo"
 
 #. module: mail_outbound_static
 #: code:addons/mail_outbound_static/models/ir_mail_server.py:0
 #, python-format
 msgid "Please define a list of domains separate by comma"
-msgstr ""
+msgstr "Por favor defina una lista de dominios separados por coma"
 
 #. module: mail_outbound_static
 #: model:ir.model.fields,help:mail_outbound_static.field_ir_mail_server__smtp_from
@@ -67,3 +57,7 @@ msgid ""
 "replaced with this value. If does match with the domain whitelist then the "
 "original message's 'From' will not change"
 msgstr ""
+"Definalo para usar un dirección de correo 'De' especifica. Si el 'De' del mensaje "
+"original no coincide con la lista blanca de dominios entonces este será "
+"remplazado con este valor. Si coincide con la lista blanca de dominios entonces "
+"el 'De' del mensajee original no cambiará"
