--- a/mail_preview_base/i18n/mail_preview_base.pot
+++ b/mail_preview_base/i18n/mail_preview_base.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* mail_preview_base
+# 	* mail_preview_base
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,23 +15,24 @@ msgstr ""
 
 #. module: mail_preview_base
 #. openerp-web
-#: code:addons/mail_preview_base/static/src/xml/preview.xml:11
-#: code:addons/mail_preview_base/static/src/xml/preview.xml:14
+#: code:addons/mail_preview_base/static/src/xml/preview.xml:0
+#: code:addons/mail_preview_base/static/src/xml/preview.xml:0
 #, python-format
 msgid "#{widget.activeAttachment.source_url}"
 msgstr ""
 
 #. module: mail_preview_base
 #. openerp-web
-#: code:addons/mail_preview_base/static/src/xml/preview.xml:5
+#: code:addons/mail_preview_base/static/src/xml/preview.xml:0
 #, python-format
-msgid "#{widget.activeAttachment.source_url}?unique=1&signature=#{widget.activeAttachment.checksum}"
+msgid ""
+"#{widget.activeAttachment.source_url}?unique=1&signature=#{widget.activeAttachment.checksum}"
 msgstr ""
 
 #. module: mail_preview_base
 #. openerp-web
-#: code:addons/mail_preview_base/static/src/xml/preview.xml:8
+#: code:addons/mail_preview_base/static/src/xml/preview.xml:0
 #, python-format
-msgid "/web/static/lib/pdfjs/web/viewer.html?file=#{widget.activeAttachment.source_url}"
+msgid ""
+"/web/static/lib/pdfjs/web/viewer.html?file=#{widget.activeAttachment.source_url}"
 msgstr ""
-
