--- a/mail_preview_audio/i18n/mail_preview_audio.pot
+++ b/mail_preview_audio/i18n/mail_preview_audio.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* mail_preview_audio
+# 	* mail_preview_audio
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,8 +15,7 @@ msgstr ""
 
 #. module: mail_preview_audio
 #. openerp-web
-#: code:addons/mail_preview_audio/static/src/xml/preview.xml:7
+#: code:addons/mail_preview_audio/static/src/xml/preview.xml:0
 #, python-format
 msgid "Audio"
 msgstr ""
-
