--- a/mail_full_expand/i18n/mail_full_expand.pot
+++ b/mail_full_expand/i18n/mail_full_expand.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* mail_full_expand
+# 	* mail_full_expand
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #. module: mail_full_expand
 #. openerp-web
-#: code:addons/mail_full_expand/static/src/xml/mail_full_expand.xml:10
+#: code:addons/mail_full_expand/static/src/xml/mail_full_expand.xml:0
 #, python-format
 msgid "Fully Expand"
 msgstr ""
@@ -34,4 +34,3 @@ msgstr ""
 #: model:ir.actions.act_window,name:mail_full_expand.mail_message_action
 msgid "Read Full Email"
 msgstr ""
-
