--- a/mail_preview_audio/i18n/mail_preview_audio.pot
+++ b/mail_preview_audio/i18n/mail_preview_audio.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 13.0\n"
+"Project-Id-Version: Odoo Server 14.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -15,6 +15,7 @@ msgstr ""
 
 #. module: mail_preview_audio
 #. openerp-web
+#: code:addons/mail_preview_audio/static/src/xml/preview.xml:0
 #: code:addons/mail_preview_audio/static/src/xml/preview.xml:0
 #, python-format
 msgid "Audio"
