--- a/mail_show_follower/i18n/mail_show_follower.pot
+++ b/mail_show_follower/i18n/mail_show_follower.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* mail_show_follower
+# 	* mail_show_follower
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,4 +48,3 @@ msgstr ""
 #: model:ir.model,name:mail_show_follower.model_res_users
 msgid "Users"
 msgstr ""
-
