--- a/mass_mailing_resend/i18n/mass_mailing_resend.pot
+++ b/mass_mailing_resend/i18n/mass_mailing_resend.pot
@@ -18,7 +18,7 @@ msgstr ""
 msgid ""
 "<i class=\"fa fa-info-circle\"/> New sending will be done only to not "
 "sent/new recipients. If you want to resend again the mass mailing to already"
-" sent recipients, click on <b>Emails Sent</b> smart-button for removing the "
+" sent recipients, click on <b>Sent</b> smart-button for removing the "
 "existing record(s)."
 msgstr ""
 
